markup/modules/page-slider/page-slider.styl
.detached-screen
  box-shadow 0 0 30px 0 rgba(0,0,0,0.13)
  box-sizing border-box
  display none
  left: 0
  right: 0
  min-height 100%
  margin: 0 auto;
  overflow hidden
  position fixed
  max-width: 1440px
  width 100%
  &:first-child
    display block
    position absolute

.detached-screen_overlay
  background #000
  position absolute
  bottom 0
  top 0
  right 0
  left 0
  z-index 3

.detached-screen_overlay__transparent
  z-index: 1

.content-wrapper
  margin: 0 auto
  max-width: 786px
  padding-top: 70px
  position: relative
  z-index: 2

.content-title
  color $colorRed
  font-family: $AvenirDemi
  font-size: 32px
  margin: 60px 0 4.45vh 0
  text-decoration: none

.detached-screen_icon-img
  max-width 100%

.detached-screen_icon-subtitle
  color #ffffff
  font-size 24px
  font-weight normal
  margin 20px 0

.detached-screen_description
  margin-top 30px

.detached-screen_description-list
  list-style none
  margin-top 72px
  padding 0

.detached-screen_description-list_text
  font-size 48px
  line-height 56px
  position relative
  &:before
    background #ffffff
    border-radius 50%
    content ""
    height 16px
    left -35px
    position absolute
    top 18px
    width 16px



// @media (max-width: 800px)
//   .detached-screen
//     padding 0 5px

//   .detached-screen_description-text
//     font-size 24px
//     line-height 32px

//   .detached-screen_btn
//     min-width 100%

//   .detached-screen_icon-img
//     max-width 26vw

//   .detached-screen_icon-subtitle
//     margin 10px 0

//   .detached-screen_description-list_item
//     margin-bottom 10px
//     &:last-child
//       margin-bottom 0

//   .detached-screen_description-list_text
//     font-size 24px
//     line-height 32px
//     &:before
//         border-radius 50%
//         content ""
//         height 6px
//         left -10px
//         position absolute
//         top 12px
//         width 6px

